@@ -11,10 +11,15 @@ description = "MoonLight: a light-weight framework for runtime monitoring"
 
 // == General Java settings ==
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
     withJavadocJar()
     withSourcesJar()
+}
+
+tasks.withType<JavaCompile> {
+    // Needed by pattern matching on switches:
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks {
@@ -30,6 +35,8 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
+    // Needed by pattern matching on switches:
+    jvmArgs("--enable-preview")
 }
 
 // Do not generate reports for individual projects
